--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-    color:darkorchid;
+    color:rgb(186, 204, 50);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
